--- a/.github/workflows/testops-integration.yml
+++ b/.github/workflows/testops-integration.yml
@@ -22,7 +22,10 @@ on:
 env:
   ALLURE_RESULTS: "build/allure-results"
   ALLURE_JOB_RUN_ID: ${{ github.event.inputs.ALLURE_JOB_RUN_ID }}
-  ALLURE_PROJECT_ID: 338
+  ALLURE_ENDPOINT: "https://testing.testops.cloud"
+  ALLURE_PROJECT_ID: 7806
+  GH_BRANCH: ${{ github.main }}
+
 
 jobs:
   all-tests:
@@ -36,7 +39,7 @@ jobs:
       - name: install and configure allurectl
         uses: allure-framework/setup-allurectl@v1
         with:
-          allure-endpoint: https://demo.testops.cloud
+          allure-endpoint: https://testing.testops.cloud
           allure-token: ${{ secrets.ALLURE_TOKEN }}
           allure-project-id: ${{ env.ALLURE_PROJECT_ID }}
       - name: Build with Gradle
