--- a/.github/workflows/testops-integration.yml
+++ b/.github/workflows/testops-integration.yml
@@ -31,12 +31,12 @@ jobs:
   all-tests:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
+      - uses: actions/checkout@v3
+      - name: Set up JDK
+        uses: actions/setup-java@v3
         with:
           java-version: 1.8
-      - name: install and configure allurectl
+      - name: install allurectl
         uses: allure-framework/setup-allurectl@v1
         with:
           allure-endpoint: https://testing.testops.cloud
