--- a/.github/workflows/testops-integration.yml
+++ b/.github/workflows/testops-integration.yml
@@ -18,6 +18,31 @@ on:
       ALLURE_USERNAME:
         description: "ALLURE_USERNAME service parameter. Leave blank"
         required: false
+      QA_ENV:
+        type: choice
+        description: 'QA Environment'
+        required: false
+        options:
+          - sdet1
+          - sdet2
+          - 1
+          - 2
+          - 3
+          - 4
+          - 5
+          - 6
+          - 7
+          - 8
+          - 9
+          - 10
+          - 11
+          - 12
+          - 13
+          - 14
+          - 15
+          - 16
+          - 17
+        default: 'sdet1'
 
 env:
   ALLURE_ENDPOINT: https://testing.testops.cloud/ 
