--- a/.github/workflows/testops-integration.yml
+++ b/.github/workflows/testops-integration.yml
@@ -1,47 +1,60 @@
-name: API HMB ALLURE
+name: gh-integration
 
 on:
+  push:
   workflow_dispatch:
     inputs:
-      ALLURE_USERNAME:
-        description: ALLURE_USERNAME service parameter. Leave blank.
-      ALLURE_JOB_RUN_ID:
-        description: "ALLURE_JOB_RUN_ID service parameter. Leave blank."
-        required: false
       TEST_ENDPOINT:
         description: "Endpoint for tests"
         required: true
         default: https://dev.github.com
+      TEST_BROWSER:
+        description: "Browser for tests"
+        required: true
+        default: chrome
+      ALLURE_JOB_RUN_ID:
+        description: "ALLURE_JOB_RUN_ID service parameter. Leave blank."
+        required: false
+      ALLURE_USERNAME:
+        description: "ALLURE_USERNAME service parameter. Leave blank"
+        required: false
 
 env:
-    ALLURE_TOKEN: ${{ secrets.ALLURE_TOKEN }}
-    ALLURE_ENDPOINT: https://testing.testops.cloud/ 
-    ALLURE_PROJECT_ID: 7806
-    
-jobs:
-  build:
-    timeout-minutes: 30
-    runs-on: ubuntu-latest
-      #group: soundboard
+  ALLURE_RESULTS: "build/allure-results"
+  ALLURE_JOB_RUN_ID: ${{ github.event.inputs.ALLURE_JOB_RUN_ID }}
+  ALLURE_PROJECT_ID: 7806
+  ALLURE_ENDPOINT: https://testing.testops.cloud/
 
+
+jobs:
+  all-tests:
+    runs-on: ubuntu-latest
     steps:
-      - uses: ./.github/actions/dependencies
-      - name: Install API dependencies
-        run: cd test-components/api && npm ci
-      - name: Install PW 
-        run: cd test-components/api && npx playwright install
-      - name: Run API PW HMB Tests
-        if: success() || failure()
-        run: cd test-components/api-pw/workflow-pod && npx playwright test tests/HMB --workers=1
-      - name: Upload Report Artifact
-        if: success() || failure()
-        uses: actions/upload-artifact@v3
+      - uses: actions/checkout@v1
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
         with:
-          name: html-report
-          path: _OUTPUT/html-report
-          retention-days: 5
-      - name: Upload Allure Results
-        if: success() || failure()
-        uses: ./.github/actions/allure
+          java-version: 1.8
+      - name: install and configure allurectl
+        uses: allure-framework/setup-allurectl@v1
+        with:
+          allure-endpoint: ${{ env.ALLURE_ENDPOINT }}
+          allure-token: ${{ secrets.ALLURE_TOKEN }}
+          allure-project-id: 7806
+      - name: Build with Gradle
+        run: |
+          allurectl watch -- ./gradlew clean test
+          export $( ./allurectl job-run env)
+          printenv | grep TEST_
+          printenv | grep ALLURE_
+        env:
+          TEST_ENDPOINT: ${{ github.event.inputs.TEST_ENDPOINT }}
+          TEST_BROWSER: ${{ github.event.inputs.TEST_BROWSER }}
+      - name: Get ALLURE_ environments
+        run: | 
+          printenv | grep ALLURE_
+      - name: Get GITHUB_ environments
+        run: | 
+          printenv | grep GITHUB_
       - name: List results
         run: ls -la ${ALLURE_RESULTS}
