--- a/.github/workflows/testops-integration.yml
+++ b/.github/workflows/testops-integration.yml
@@ -50,7 +50,7 @@ jobs:
         env:
           TEST_ENDPOINT: ${{ github.event.inputs.TEST_ENDPOINT }}
           TEST_BROWSER: ${{ github.event.inputs.TEST_BROWSER }}
-          GITHUB_TESTS_BRANCH: ${{ github.ref_name }}
+          GITHUB_TESTS_BRANCH: ${{ github.doptest }}
       - name: Get ALLURE_ environments
         run: | 
           printenv | grep ALLURE_
