--- a/.github/workflows/testops-integration.yml
+++ b/.github/workflows/testops-integration.yml
@@ -24,6 +24,7 @@ env:
   ALLURE_JOB_RUN_ID: ${{ github.event.inputs.ALLURE_JOB_RUN_ID }}
   ALLURE_PROJECT_ID: 1
   ALLURE_ENDPOINT: https://testing.testops.cloud/
+  ALLURE_TOKEN: 330c295b-762f-47d6-a662-f81fb087a3f4
 
 
 jobs:
@@ -39,7 +40,7 @@ jobs:
         uses: allure-framework/setup-allurectl@v1
         with:
           allure-endpoint: ${{ env.ALLURE_ENDPOINT }}
-          allure-token: ${{ secrets.ALLURE_TOKEN }}
+          allure-token: ${{ env.ALLURE_TOKEN }}
           allure-project-id: 1
       - name: Build with Gradle
         run: |
