--- a/.github/workflows/testops-integration.yml
+++ b/.github/workflows/testops-integration.yml
@@ -23,7 +23,7 @@ env:
   ALLURE_RESULTS: "build/allure-results"
   ALLURE_JOB_RUN_ID: ${{ github.event.inputs.ALLURE_JOB_RUN_ID }}
   ALLURE_PROJECT_ID: 1
-  ALLURE_ENDPOINT: https://testing.testops.cloud/
+  ALLURE_ENDPOINT: http://116.203.103.50:22869/
   ALLURE_TOKEN: 330c295b-762f-47d6-a662-f81fb087a3f4
 
 
