--- a/.github/workflows/testops-integration.yml
+++ b/.github/workflows/testops-integration.yml
@@ -1,4 +1,4 @@
-name: gh-integrationgh-integrationgh-integrationgh-integrationgh-integrationgh-integrationgh-integrationgh-integrationgh-integration
+name: gh-integration
 
 on:
   push:
