--- a/.github/workflows/testops-integration.yml
+++ b/.github/workflows/testops-integration.yml
@@ -28,7 +28,7 @@ env:
 
 
 jobs:
-  all-tests:
+  all-testsall-testsall-testsall-testsall-testsall-testsall-testsall-testsall-testsall-testsall-testsall-testsall-testsall-testsall-testsall-tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
