--- a/.github/workflows/testops-integration.yml
+++ b/.github/workflows/testops-integration.yml
@@ -21,7 +21,7 @@ on:
 
 env:
   ALLURE_RESULTS: "build/allure-results"
-  ALLURE_JOB_RUN_ID: ${{ github.event.inputs.ALLURE_JOB_RUN_ID }}
+  #ALLURE_JOB_RUN_ID: ${{ github.event.inputs.ALLURE_JOB_RUN_ID }}
   ALLURE_PROJECT_ID: 7806
   ALLURE_ENDPOINT: https://testing.testops.cloud/
   ALLURE_TOKEN: ${{ secrets.ALLURE_TOKEN }}
