--- a/.github/workflows/testops-integration.yml
+++ b/.github/workflows/testops-integration.yml
@@ -44,7 +44,7 @@ jobs:
           allure-project-id: 1549
       - name: Build with Gradle
         run: |
-          allurectl watch -- ./gradlew
+          allurectl watch -- ./gradlew clean test
           export $( ./allurectl job-run env)
           printenv | grep TEST_
           printenv | grep ALLURE_
